@@ -1,3 +1,6 @@
+2006-02-21	dnedrow
+	* Updated doco to clarify session behavior reported as bug in #1011334.
+
 2006-02-20	ujwal
 
 	* Rolled back _updateDisplayThread change in PseudoTerminal since that broke the
